# mlkem-native

./: .clang-format  .clang-tidy  .envrc  .gitignore  .gitmodules  BIBLIOGRAPHY.md  BIBLIOGRAPHY.md.new  BIBLIOGRAPHY.yml  BUILDING.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  FIPS202.md  LICENSE  MAINTAINERS.md  META.py  META.sh  META.yml  ML-KEM-1024_META.yml  ML-KEM-512_META.yml  ML-KEM-768_META.yml  Makefile  Makefile.Microsoft_nmake  README.md  REFERENCE.md  RELEASE.md  RELICENSE.md  SOUNDNESS.md  THIRD_PARTY  add_copyright.sh  flake.nix  no_copyright.sh  or  out0  out1  references.yml  relicense.sh  relicense_md.sh  relicense_md2.sh  (+21 more)
.cargo/: config.toml
.github/: actionlint.yaml  dependabot.yml  mlc_config.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/scripts/: check-wycheproof-updates.py
.github/workflows/: all.yml  aws_lc.yml  baremetal.yml  base.yml  bench.yml  bench_ec2_any.yml  bench_ec2_reusable.yml  cbmc.yml  ci.yml  ci_ec2_any.yml  ci_ec2_container.yml  ci_ec2_reusable.yml  compiler-tests.yml  ct-tests.yml  hol_light.yml  integration-awslc-main.yml  integration-awslc.yml  integration-liboqs.yml  integration-opentitan.yml  integration-pavona.yml  isabelle.yml  legacy-compilers.yml  legacy_compilers.yml  legacy_compilers_ct.yml  lint_markdown.yml  nix.yml  riscv.yml  rust.yml  scorecard.yaml  slothy.yml  wycheproof-updates.yml  zephyr.yml
bindings/rust/mlkem-native/: Cargo.toml  build.rs
bindings/rust/mlkem-native/examples/: kem.rs  serialization.rs
bindings/rust/mlkem-native/src/: lib.rs  sys.rs
cbmc/: Makefile.common  proof_guide.md  run-cbmc-proofs.py
cbmc/KeccakF1600_StateExtractBytes_BE/: Makefile
cbmc/KeccakF1600_StateXORBytes_BE/: Makefile
cbmc/KeccakF1600x4_StateExtractBytes/: KeccakF1600x4_StateExtractBytes_harness.c
cbmc/KeccakF1600x4_StatePermute/: KeccakF1600x4_StatePermute_harness.c  Makefile
cbmc/KeccakF1600x4_StateXORBytes/: KeccakF1600x4_StateXORBytes_harness.c  Makefile
cbmc/barrett_reduce/: Makefile
cbmc/ct_cmask_neg_i16/: Makefile
cbmc/ct_cmask_nonzero_u16/: Makefile
cbmc/ct_cmask_nonzero_u8/: Makefile
cbmc/ct_sel_int16/: Makefile
cbmc/ct_sel_uint8/: Makefile
cbmc/fqmul/: Makefile
cbmc/gen_matrix/: Makefile
cbmc/gen_matrix_entry/: Makefile
cbmc/gen_matrix_entry_x4/: Makefile  gen_matrix_entry_x4_harness.c
cbmc/invntt_layer/: invntt_layer_harness.c
cbmc/invntt_layer321/: invntt_layer321_harness.c
cbmc/invntt_layer54/: invntt_layer54_harness.c
cbmc/invntt_layer54_butterfly/: invntt_layer54_butterfly_harness.c
cbmc/invntt_layer6/: invntt_layer6_harness.c
cbmc/invntt_layer6_butterfly/: invntt_layer6_butterfly_harness.c
cbmc/invntt_layer7_invert/: invntt_layer7_invert_harness.c
cbmc/invntt_layer7_invert_butterfly/: invntt_layer7_invert_butterfly_harness.c
cbmc/keccak_absorb_once/: Makefile
cbmc/keccak_squeeze_once/: Makefile
cbmc/keccak_squeezeblocks_x4/: Makefile  keccak_squeezeblocks_x4_harness.c
cbmc/matvec_mul/: Makefile  matvec_mul_harness.c
cbmc/ntt_butterfly_block/: Makefile  ntt_butterfly_block_harness.c
cbmc/ntt_layer/: Makefile  ntt_layer_harness.c
cbmc/ntt_layer123/: ntt_layer123_harness.c
cbmc/ntt_layer45/: ntt_layer45_harness.c
cbmc/ntt_layer45_butterfly/: ntt_layer45_butterfly_harness.c
cbmc/ntt_layer6/: ntt_layer6_harness.c
cbmc/ntt_layer6_butterfly/: ntt_layer6_butterfly_harness.c
cbmc/ntt_layer7/: ntt_layer7_harness.c
cbmc/ntt_layer7_butterfly/: ntt_layer7_butterfly_harness.c
cbmc/poly_compress_dv/: Makefile
cbmc/poly_getnoise_eta2/: poly_getnoise_eta2_harness.c
cbmc/rej_uniform_scalar/: rej_uniform_scalar_harness.c
cbmc/scalar_signed_to_unsigned_q/: Makefile
cbmc/sha3_256/: Makefile
cbmc/shake128_absorb_once/: Makefile
cbmc/shake128x4_squeezeblocks/: Makefile  shake128x4_squeezeblocks_harness.c
cbmc/shake256x4/: Makefile  shake256x4_harness.c
dev/: README.md
dev/aarch64_clean/: README.md  clean.h  meta.h
dev/aarch64_opt/: README.md  meta.h  opt.h
dev/bench/: index.html
dev/cbmc/: data.js  mlkem-1024.json  mlkem-512.json  mlkem-768.json
dev/ppc64le/: README.md  meta.h
dev/x86_64/: README.md  default.h  meta.h
examples/: README.md
examples/basic/: Makefile  README.md  main.c
examples/basic_deterministic/: Makefile  README.md  main.c
examples/basic_rng_failure/: README.md  main.c
examples/bring_your_own_fips202/: Makefile  README.md  main.c
fips202/: fips202.c  fips202.h  fips202x4.c  fips202x4.h  keccakf1600.h
hol_light/: .gitignore
mk/: config.mk  rules.mk  schemes.mk
mlkem/: README.md  a.out  arith_backend.h  cbd.c  cbd.h  cbmc.h  common.h  compress.c  compress.h  config.h  debug.c  debug.h  indcpa.c  indcpa.h  kem.c  kem.h  mlkem_native.S  mlkem_native.c  mlkem_native.h  mlkem_native_asm.S  mlkem_native_config.h  namespace.h  ntt.c  ntt.h  params.h  poly.c  poly.h  poly_k.c  poly_k.h  polyvec.c  polyvec.h  randombytes.h  reduce.h  rej_uniform.c  rej_uniform.h  sampling.c  sampling.h  structs.h  symmetric.h  sys.h  (+5 more)
nix/: util.nix
proofs/: README.md  README.md~
scripts/: Doxyfile.lint  README.md  analyze_stack.py  autogen  autogenerate_files.py  callinfo  cfify  check-contracts  check-hol-light-imports  check-magic  check-namespace  format  lint  notrandombytes  simpasm  stack  testSize  tests
test/: acvp_client.py  acvp_mlkem.c  bench_components_mlkem.c  bench_mlkem.c  break_pct_config.h  configs.yml  custom_memcpy_config.h  custom_memset_config.h  custom_native_capability_config.h  custom_native_capability_config_0.h  custom_native_capability_config_1.h  custom_native_capability_config_CPUID_AVX2.h  custom_native_capability_config_ID_AA64PFR1_EL1.h  custom_randombytes_config.h  custom_stdlib_config.h  custom_zeroize_config.h  gen_KAT.c  gen_NISTKAT.c  no_asm_config.h  serial_fips202_config.h  stack_test.c  test_alloc.c  test_alloc_config.h  test_bounds.py  test_mlkem.c  test_stack.c  test_unit.c
test/zephyr/app/: CMakeLists.txt  Kconfig  nucleo_n657x0_q.conf  nucleo_n657x0_q.overlay  prj.conf  shim.c  shim_nucleo_n657x0_q.c
(+2004 files in other folders)
