[package]
name = "mlkem-native"
version = "1.1.0-rc.1"
edition = "2021"
description = "ML-KEM (FIPS 203) via mlkem-native, implementing the RustCrypto KEM traits"
repository = "https://github.com/pq-code-package/mlkem-native"
license = "Apache-2.0 OR ISC OR MIT"

[dependencies]
kem = "0.3.0-rc.6"
hybrid-array = { version = "0.4", features = ["extra-sizes"] }
rand_core = { version = "0.10", default-features = false }

[dev-dependencies]
kem = { version = "0.3.0-rc.6", features = ["getrandom"] }
rand_core = "0.10"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.60"
